[package]
name = "landcoin-contract"
version = "0.1.0"
edition = "2021"
authors = ["timothyAgevi <timothyagevi@gmail.com>"]

[dependencies]
near-sdk = "4.0.0-pre.7"
near-contract-standards = "4.0.0-pre.7"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = true
panic = "abort"
overflow-checks = true